--- a/docs/android/java-concurrency-in-practice.org
+++ b/docs/android/java-concurrency-in-practice.org
@@ -1,3 +1,6 @@
+#+LATEX_HEADER: \usepackage{xeCJK}
+#+LATEX_HEADER: \setCJKmainfont{Noto Sans Mono CJK SC Regular}
+
 * Java Concurrency In Practice 读书笔记
 
 ** 基本数据结构
